src/dev/matthewwarren/kube/antlr/KubeParser.java
// Generated from /home/matthew/Desktop/Programming/Kotlin/Projects/KubeCompiler/grammar/Kube.g4 by ANTLR 4.8
package dev.matthewwarren.kube.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KubeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, Var=49, Val=50, NoneSafeAccess=51, NonNoneAccess=52, 
		Increment=53, Decrement=54, LogicalNot=55, BitwiseNot=56, Elvis=57, Multiply=58, 
		Divide=59, Modulus=60, DivideModulus=61, Plus=62, Minus=63, LeftShift=64, 
		ArithmeticRightShift=65, LogicalRightShift=66, BitwiseAnd=67, BitwiseXor=68, 
		BitwiseOr=69, RangeTo=70, RangeUntil=71, LessThan=72, LessThanEqual=73, 
		GreaterThan=74, GreaterThanEqual=75, By=76, Is=77, NotIs=78, In=79, NotIn=80, 
		Has=81, NotHas=82, Equals=83, NotEquals=84, LogicalAnd=85, LogicalOr=86, 
		Noneable=87, IntegerLiteral=88, FloatingPointLiteral=89, BooleanLiteral=90, 
		CharacterLiteral=91, RawStringLiteral=92, StringLiteral=93, NoneLiteral=94, 
		Identifier=95, WS=96, LINE_COMMENT=97;
	public static final int
		RULE_file = 0, RULE_module = 1, RULE_importExpr = 2, RULE_moduleContent = 3, 
		RULE_alias = 4, RULE_typeAlias = 5, RULE_interface0 = 6, RULE_interfaceElement = 7, 
		RULE_class0 = 8, RULE_classElement = 9, RULE_object0 = 10, RULE_objectElement = 11, 
		RULE_enum0 = 12, RULE_annotation0 = 13, RULE_annotation1 = 14, RULE_enumList = 15, 
		RULE_enumValue = 16, RULE_parameterExpression = 17, RULE_enumElement = 18, 
		RULE_variable = 19, RULE_variableDeclaration = 20, RULE_value = 21, RULE_valueDeclaration = 22, 
		RULE_getter = 23, RULE_setter = 24, RULE_function = 25, RULE_functionDeclaration = 26, 
		RULE_parameter = 27, RULE_initializer = 28, RULE_finalizer = 29, RULE_primaryConstructor = 30, 
		RULE_constructorParameter = 31, RULE_constructor = 32, RULE_constructorCall = 33, 
		RULE_statement = 34, RULE_ifStatement = 35, RULE_elseBlock = 36, RULE_whenStatement = 37, 
		RULE_whenStatementEntry = 38, RULE_whenCondition = 39, RULE_rangeTest = 40, 
		RULE_typeTest = 41, RULE_memberTest = 42, RULE_forLoop = 43, RULE_whileLoop = 44, 
		RULE_doWhileLoop = 45, RULE_assignmentOperator = 46, RULE_expression = 47, 
		RULE_logicalOrExpression = 48, RULE_logicalAndExpression = 49, RULE_equalityExpression = 50, 
		RULE_comparisonExpression = 51, RULE_infixOperation = 52, RULE_elvisExpression = 53, 
		RULE_rangeExpression = 54, RULE_bitwiseExpression = 55, RULE_additiveExpression = 56, 
		RULE_multiplicativeExpression = 57, RULE_prefixUnaryExpression = 58, RULE_postfixUnaryExpression = 59, 
		RULE_postfixUnarySuffix = 60, RULE_callSuffix = 61, RULE_indexingSuffix = 62, 
		RULE_navigationSuffix = 63, RULE_primaryExpression = 64, RULE_thisExpression = 65, 
		RULE_literal = 66, RULE_array = 67, RULE_map = 68, RULE_set = 69, RULE_tuple = 70, 
		RULE_lambdaLiteral = 71, RULE_lambdaParameter = 72, RULE_objectLiteral = 73, 
		RULE_returnExpression = 74, RULE_memberAccess = 75, RULE_postUnaryOperator = 76, 
		RULE_preUnaryOperator = 77, RULE_multiplicativeOperator = 78, RULE_additiveOperator = 79, 
		RULE_bitwiseOperator = 80, RULE_rangeOperator = 81, RULE_relationalOperator = 82, 
		RULE_isOperator = 83, RULE_inOperator = 84, RULE_hasOperator = 85, RULE_equalityOperator = 86, 
		RULE_ifExpression = 87, RULE_elseExpression = 88, RULE_whenExpression = 89, 
		RULE_whenExpressionEntry = 90, RULE_genericDeclaration = 91, RULE_genericTypeDeclaration = 92, 
		RULE_generic = 93, RULE_type = 94, RULE_unionType = 95, RULE_sumType = 96, 
		RULE_primaryType = 97, RULE_functionType = 98, RULE_functionParameterTypes = 99;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "module", "importExpr", "moduleContent", "alias", "typeAlias", 
			"interface0", "interfaceElement", "class0", "classElement", "object0", 
			"objectElement", "enum0", "annotation0", "annotation1", "enumList", "enumValue", 
			"parameterExpression", "enumElement", "variable", "variableDeclaration", 
			"value", "valueDeclaration", "getter", "setter", "function", "functionDeclaration", 
			"parameter", "initializer", "finalizer", "primaryConstructor", "constructorParameter", 
			"constructor", "constructorCall", "statement", "ifStatement", "elseBlock", 
			"whenStatement", "whenStatementEntry", "whenCondition", "rangeTest", 
			"typeTest", "memberTest", "forLoop", "whileLoop", "doWhileLoop", "assignmentOperator", 
			"expression", "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"comparisonExpression", "infixOperation", "elvisExpression", "rangeExpression", 
			"bitwiseExpression", "additiveExpression", "multiplicativeExpression", 
			"prefixUnaryExpression", "postfixUnaryExpression", "postfixUnarySuffix", 
			"callSuffix", "indexingSuffix", "navigationSuffix", "primaryExpression", 
			"thisExpression", "literal", "array", "map", "set", "tuple", "lambdaLiteral", 
			"lambdaParameter", "objectLiteral", "returnExpression", "memberAccess", 
			"postUnaryOperator", "preUnaryOperator", "multiplicativeOperator", "additiveOperator", 
			"bitwiseOperator", "rangeOperator", "relationalOperator", "isOperator", 
			"inOperator", "hasOperator", "equalityOperator", "ifExpression", "elseExpression", 
			"whenExpression", "whenExpressionEntry", "genericDeclaration", "genericTypeDeclaration", 
			"generic", "type", "unionType", "sumType", "primaryType", "functionType", 
			"functionParameterTypes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'module'", "'{'", "'}'", "'import'", "'alias'", "'='", "'typeAlias'", 
			"'interface'", "':'", "'class'", "'with'", "','", "'object'", "'enum'", 
			"';'", "'annotation'", "'@'", "'('", "')'", "'get'", "'set'", "'fun'", 
			"'init'", "'finalize'", "'constructor'", "'this'", "'if'", "'else'", 
			"'when'", "'->'", "'for'", "'while'", "'do'", "'*='", "'/='", "'%='", 
			"'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'['", 
			"']'", "'to'", "'return'", "'var'", "'val'", "'?.'", "'.'", "'++'", "'--'", 
			"'!'", "'~'", "'?:'", "'*'", "'/'", "'%'", "'/%'", "'+'", "'-'", "'<<'", 
			"'>>'", "'>>>'", "'&'", "'^'", "'|'", "'...'", "'..<'", "'<'", "'<='", 
			"'>'", "'>='", "'by'", "'is'", "'!is'", "'in'", "'!in'", "'has'", "'!has'", 
			"'=='", "'!='", "'&&'", "'||'", "'?'", null, null, null, null, null, 
			null, "'none'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "Var", "Val", "NoneSafeAccess", "NonNoneAccess", "Increment", "Decrement", 
			"LogicalNot", "BitwiseNot", "Elvis", "Multiply", "Divide", "Modulus", 
			"DivideModulus", "Plus", "Minus", "LeftShift", "ArithmeticRightShift", 
			"LogicalRightShift", "BitwiseAnd", "BitwiseXor", "BitwiseOr", "RangeTo", 
			"RangeUntil", "LessThan", "LessThanEqual", "GreaterThan", "GreaterThanEqual", 
			"By", "Is", "NotIs", "In", "NotIn", "Has", "NotHas", "Equals", "NotEquals", 
			"LogicalAnd", "LogicalOr", "Noneable", "IntegerLiteral", "FloatingPointLiteral", 
			"BooleanLiteral", "CharacterLiteral", "RawStringLiteral", "StringLiteral", 
			"NoneLiteral", "Identifier", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kube.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KubeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KubeVisitor ) return ((KubeVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(200);
				module();
				}
				}
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KubeParser.Identifier, 0); }
		public List<ImportExprContext> importExpr() {
			return getRuleContexts(ImportExprContext.class);
		}
		public ImportExprContext importExpr(int i) {
			return getRuleContext(ImportExprContext.class,i);
		}
		public List<ModuleContentContext> moduleContent() {
			return getRuleContexts(ModuleContentContext.class);
		}
		public ModuleContentContext moduleContent(int i) {
			return getRuleContext(ModuleContentContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KubeVisitor ) return ((KubeVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			match(T__0);
			setState(207);
			match(Identifier);
			setState(208);
			match(T__1);
			setState(212);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(209);
				importExpr();
				}
				}
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__16) | (1L << T__21) | (1L << T__22) | (1L << Var) | (1L << Val))) != 0)) {
				{
				{
				setState(215);
				moduleContent();
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(221);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportExprContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(KubeParser.Identifier, 0); }
		public ImportExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KubeVisitor ) return ((KubeVisitor<? extends T>)visitor).visitImportExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportExprContext importExpr() throws RecognitionException {
		ImportExprContext _localctx = new ImportExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(T__3);
			setState(224);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContentContext extends ParserRuleContext {
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public TypeAliasContext typeAlias() {
			return getRuleContext(TypeAliasContext.class,0);
		}
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public Interface0Context interface0() {
			return getRuleContext(Interface0Context.class,0);
		}
		public List<Annotation1Context> annotation1() {
			return getRuleContexts(Annotation1Context.class);
		}
		public Annotation1Context annotation1(int i) {
			return getRuleContext(Annotation1Context.class,i);
		}
		public Class0Context class0() {
			return getRuleContext(Class0Context.class,0);
		}
		public Object0Context object0() {
			return getRuleContext(Object0Context.class,0);
		}
		public Enum0Context enum0() {
			return getRuleContext(Enum0Context.class,0);
		}
		public Annotation0Context annotation0() {
			return getRuleContext(Annotation0Context.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ModuleContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleContent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KubeVisitor ) return ((KubeVisitor<? extends T>)visitor).visitModuleContent(this);
			else return visitor.visitChildren(this);
		}
	}
